Fixed font on mobile browsers

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,7 +44,7 @@
 }
 
 #best-certainty {
-    font-family: Montserrat;
+    font-family: "Montserrat", sans-serif;
     text-align: center;
     color: white;
 }
